# sampler_infinite-frontend

./: .gitignore  README.md  git-auto-pull.service  git-auto-pull.sh
frontend/: .env  .env.development  .gitignore  App.jsx  git-auto-pull.sh  index.html  package-lock.json  package.json
frontend/components/AboutAuthor/: AboutAuthor.jsx
frontend/components/AccountChange/: AccountChange.jsx  AccountChangeSlice.js
frontend/components/Audio/: Audio.jsx  AudioSlice.js  AudioStyle.css
frontend/components/AudioCreator/: AudioCreator.jsx  AudioCreatorApi.js
frontend/components/AudioUploader/: AudioUploader.jsx  AudioUploaderSlice.js
frontend/components/Audios/: Audios.jsx  AudiosSlice.js
frontend/components/AudiosUploader/: AudiosUploader.jsx  AudiosUploaderSlice.js
frontend/components/GranularInfinite/: GranularInfinite.jsx  Keyboard.css
frontend/components/GranularInfiniteNew/: GranularInfiniteNew.jsx  GranularInfiniteNewSlice.js  GranularInfiniteOld.jsx  Keyboard.css
frontend/components/GranularSynth/: GranularSynth.jsx  (+1 more)
frontend/hooks/: useDebouncedCallback.js  useDefaultUser.js  useKeyToNote.js  useSingleAudio.js  useThrottledCallback.js  useWebSocket.js
frontend/public/: granular-worker.js  granular-worklet.js  granular-workletold.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/rust/: Cargo.toml  readme.js
frontend/src/rust/src/: lib.rs  main.rs
frontend/store/: api.js  store.js
frontend/styles/: styles.css
frontend/utils/: commentUtils.js  keyToNoteUtils.js  noteToFreq.js  s3Utils.js  useEnrichedItem.js  useEnrichedUser.js
(+23 files in other folders)
