[package]
name = "grain"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.8.5", features = ["small_rng"] }
getrandom = { version = "0.2.16", features = ["js"] }
console_error_panic_hook = "0.1"
log = "0.4"
console_log = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "AudioContext",
  "AudioBuffer",
  "AudioBufferSourceNode",
  "GainNode"
]